세션 전환 완료 후 대시보드부터 팀방 진행 중