@@ -5,97 +5,96 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.socket.*;
 import org.springframework.web.socket.handler.TextWebSocketHandler;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
+import java.net.URLDecoder;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * [SignalingController]
- *
- * WebRTC 통신을 위한 signaling WebSocket 핸들러 (방 기반 확장)
+ * WebRTC 통신을 위한 signaling WebSocket 핸들러 (roomId 기반 브로드캐스트 처리)
  */
 @Slf4j
 @Component
 public class SignalingController extends TextWebSocketHandler {
 
-    /** roomId → 참여 세션 목록 */
+    /** roomId -> 참여 세션 목록 */
     private final Map<String, Set<WebSocketSession>> roomSessions = new ConcurrentHashMap<>();
 
     /**
-     * 클라이언트로부터 메시지 수신 시 처리
+     * 클라이언트 메시지 수신 시 → 같은 방 전체로 브로드캐스트
      */
     @Override
-    public void handleTextMessage(WebSocketSession session, TextMessage message) throws Exception {
+    public void handleTextMessage(WebSocketSession session, TextMessage message) {
         String payload = message.getPayload();
         String roomId = getQueryParam(session, "roomId");
 
         if (roomId == null) {
-            log.warn("🚫 roomId가 없어 메시지를 무시함: {}", session.getId());
+            log.warn("🚫 roomId 누락 - 수신 메시지 무시됨: session={}", session.getId());
             return;
         }
 
-        log.info("📨 메시지 수신 | session={}, roomId={}, message={}", session.getId(), roomId, payload);
+        log.info("📨 메시지 수신 | roomId={}, session={}, message={}", roomId, session.getId(), payload);
 
-        Set<WebSocketSession> sessions = roomSessions.getOrDefault(roomId, Set.of());
+        Set<WebSocketSession> sessions = roomSessions.getOrDefault(roomId, Collections.emptySet());
         for (WebSocketSession s : sessions) {
-            if (s.isOpen()) {
-                s.sendMessage(new TextMessage(payload));
+            try {
+                if (s.isOpen()) s.sendMessage(new TextMessage(payload));
+            } catch (Exception e) {
+                log.error("❌ 메시지 전송 실패 | targetSession={}, error={}", s.getId(), e.getMessage());
             }
         }
     }
 
     /**
-     * 연결 수립 시 roomId 기반 방 등록
+     * 연결 수립 시 방 세션에 등록
      */
     @Override
     public void afterConnectionEstablished(WebSocketSession session) throws Exception {
         String roomId = getQueryParam(session, "roomId");
 
         if (roomId == null) {
-            log.warn("❌ WebSocket 연결 거부됨: roomId 없음");
+            log.warn("❌ WebSocket 연결 거부: roomId 없음 | session={}", session.getId());
             session.close(CloseStatus.BAD_DATA);
             return;
         }
 
         roomSessions.computeIfAbsent(roomId, k -> ConcurrentHashMap.newKeySet()).add(session);
-        log.info("🔌 연결 수립: session={}, roomId={}", session.getId(), roomId);
+        log.info("🔌 WebSocket 연결됨 | roomId={}, session={}", roomId, session.getId());
     }
 
     /**
-     * 연결 종료 시 세션 제거 및 방 비우면 제거
+     * 연결 종료 시 세션 제거 + 방 비우면 삭제
      */
     @Override
-    public void afterConnectionClosed(WebSocketSession session, CloseStatus status) throws Exception {
+    public void afterConnectionClosed(WebSocketSession session, CloseStatus status) {
         String roomId = getQueryParam(session, "roomId");
 
         if (roomId != null) {
             Set<WebSocketSession> sessions = roomSessions.get(roomId);
             if (sessions != null) {
                 sessions.remove(session);
-                log.info("❎ 연결 종료: session={}, roomId={}", session.getId(), roomId);
+                log.info("❎ 연결 종료 | roomId={}, session={}, status={}", roomId, session.getId(), status);
 
                 if (sessions.isEmpty()) {
                     roomSessions.remove(roomId);
-                    log.info("🧹 방 제거됨: roomId={}", roomId);
+                    log.info("🧹 방 제거됨 | roomId={}", roomId);
                 }
             }
         }
     }
 
     /**
-     * 전송 오류 처리
+     * 연결 중 에러 처리
      */
     @Override
     public void handleTransportError(WebSocketSession session, Throwable exception) {
-        log.error("🚨 WebSocket 오류 발생 | session={} - {}", session.getId(), exception.getMessage());
+        log.error("🚨 WebSocket 오류 | session={}, error={}", session.getId(), exception.getMessage());
     }
 
     /**
-     * WebSocketSession의 URI 쿼리에서 특정 파라미터 추출
-     *
-     * @param session WebSocket 세션
-     * @param key 파라미터 키 (예: roomId, userId)
-     * @return 파라미터 값 또는 null
+     * 세션의 URI 쿼리 파라미터에서 특정 값 추출
      */
     private String getQueryParam(WebSocketSession session, String key) {
         try {
@@ -105,11 +104,13 @@ public class SignalingController extends TextWebSocketHandler {
             for (String param : uri.getQuery().split("&")) {
                 String[] pair = param.split("=");
                 if (pair.length == 2 && pair[0].equals(key)) {
-                    return pair[1];
+                    return URLDecoder.decode(pair[1], "UTF-8");
                 }
             }
+        } catch (UnsupportedEncodingException e) {
+            log.warn("❗ URL 디코딩 실패: {}", e.getMessage());
         } catch (Exception e) {
-            log.warn("❗쿼리 파라미터 추출 실패: {}", e.getMessage());
+            log.warn("❗ URI 파싱 실패: {}", e.getMessage());
         }
         return null;
     }
